update authz
