# k8s.webhook/cmd/user-management/docs/swagger.json
@@ -375,6 +375,44 @@
                 }
             }
         },
+        "/groups/{group}/roles": {
+            "get": {
+                "description": "find a role's group by it's name",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "groups"
+                ],
+                "summary": "Find a role's group by it's name",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "group name",
+                        "name": "group",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "dto",
+                        "schema": {
+                            "$ref": "#/definitions/dto.GroupDTO"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/error.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/healthz": {
             "get": {
                 "description": "send OK if it database connexion works",
@@ -959,6 +997,12 @@
                 "group": {
                     "type": "string",
                     "example": "operator"
+                },
+                "roles": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.RoleDTO"
+                    }
                 },
                 "users": {
                     "type": "array",
