# k8s.webhook/internal/dto/groupdto.go
@@ -8,7 +8,7 @@ type GroupDTO struct {
 	Group string `json:"group" mandatory:"true" example:"operator"`
 	Description string `json:"description" example:"Operator group"`
 	Users []UserDTO
-
+	Roles []RoleDTO
 }
 
 func (g *GroupDTO)Convert(i interface{}){
@@ -16,5 +16,8 @@ func (g *GroupDTO)Convert(i interface{}){
 	g.GID=i.(domain.Group).GID
 	g.Group=i.(domain.Group).Group
 	g.Description=i.(domain.Group).Description
-	
+	for _,role :=range i.(domain.Group).Roles{
+		tmp:=RoleDTO{Role:role.Role,Namespace:role.Namespace,Verb:role.Verb,Resource:role.Resource}
+		g.Roles=append(g.Roles, tmp)
+	}
 }
